fix: Align and format column stats (new PR) (#723)
* Allign and format column stats


* Update common version and other minor changes


* Update mock data include chart_name


* fix lint

--- a/frontend/amundsen_application/static/css/_variables-default.scss
+++ b/frontend/amundsen_application/static/css/_variables-default.scss
@@ -128,6 +128,7 @@ $resource-title-color: $indigo60;
 
 // Spacing
 $spacer-size: 8px;
+$spacer-half: $spacer-size/2;
 $spacer-1: $spacer-size;
 $spacer-2: $spacer-size * 2;
 $spacer-3: $spacer-size * 3;
