--- a/frontend/amundsen_application/static/js/components/common/BadgeList/styles.scss
+++ b/frontend/amundsen_application/static/js/components/common/BadgeList/styles.scss
@@ -16,7 +16,6 @@
   font-weight: normal;
 }
 
-
 .actionable-badge {
   &:hover {
     cursor: pointer;
@@ -52,30 +51,36 @@
   .badge-overlay-neutral,
   .badge-overlay-positive,
   .badge-overlay-primary {
-
     &:hover,
     &:focus {
-      background-color: rgba($color: $badge-overlay,
-          $alpha: $badge-opacity-light);
+      background-color: rgba(
+        $color: $badge-overlay,
+        $alpha: $badge-opacity-light
+      );
     }
 
     &:active {
-      background-color: rgba($color: $badge-overlay,
-          $alpha: $badge-pressed-light);
+      background-color: rgba(
+        $color: $badge-overlay,
+        $alpha: $badge-pressed-light
+      );
     }
   }
 
   .badge-overlay-warning {
-
     &:hover,
     &:focus {
-      background-color: rgba($color: $badge-overlay,
-          $alpha: $badge-opacity-dark);
+      background-color: rgba(
+        $color: $badge-overlay,
+        $alpha: $badge-opacity-dark
+      );
     }
 
     &:active {
-      background-color: rgba($color: $badge-overlay,
-          $alpha: $badge-pressed-dark);
+      background-color: rgba(
+        $color: $badge-overlay,
+        $alpha: $badge-pressed-dark
+      );
     }
   }
 }
